Added parse_numeric_value from development I did 6 months ago.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,27 @@
-venv
-.idea/*
+# compiled code
+*.py[cod]
+__pycache__/
+
+# Unit test
+.cache
+
+# venv
+venv/
+.python-version
+
+# IDE project files
+*.idea
+.vscode
+
+# distribution / packaging
+build/
+dist/
+*.egg-info/
+
+# Testing output
+.pytest_cache
+pytest.xml
+.coverage
+coverage.xml
+nosetests.xml
+pylint.out
